Fix crash if key bindings specified in profile cannot be found.  Improve KeyboardTranslator::defaultTranslator() to try loading "default.keytab" if first before falling back to the hard-coded one.

BUG:181205


svn path=/trunk/KDE/kdebase/apps/konsole/; revision=913176