src/Emulation.cpp
@@ -160,6 +160,10 @@ void Emulation::setCodec(EmulationCodec codec)
 void Emulation::setKeyBindings(const QString& name)
 {
   _keyTranslator = KeyboardTranslatorManager::instance()->findTranslator(name);
+  if (!_keyTranslator)
+  {
+      _keyTranslator = KeyboardTranslatorManager::instance()->defaultTranslator();
+  }
 }
 
 QString Emulation::keyBindings() const
